--- a/templates/home.html
+++ b/templates/home.html
@@ -8,7 +8,27 @@
 </head>
 <body class="bg">
     <div class="frame">
-        hi
+        <h1 class="title">Analysis Tool</h1>
+        <div class="content">
+           <h1 class="pickstart">Pick one to START</h1>
+            <div class="icons">
+                <div class="gallery">
+                    <a target="_blank" href="./static/src/ip.png">
+                      <img src="./static/src/ip.png" alt="Forest" width="600" height="400">
+                    </a>
+                </div>
+                <div class="gallery">
+                    <a target="_blank" href="img_forest.jpg">
+                      <img src="img_forest.jpg" alt="Forest" width="600" height="400">
+                    </a>
+                </div>
+                <div class="gallery">
+                    <a target="_blank" href="img_forest.jpg">
+                      <img src="img_forest.jpg" alt="Forest" width="600" height="400">
+                    </a>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
