--- a/templates/home.html
+++ b/templates/home.html
@@ -14,17 +14,17 @@
             <div class="icons">
                 <div class="gallery">
                     <a target="_blank" href="./static/src/ip.png">
-                      <img src="./static/src/ip.png" alt="Forest" width="600" height="400">
+                      <img src="./static/src/ip.png" alt="ip" width="250px" height="250px" >
                     </a>
                 </div>
                 <div class="gallery">
-                    <a target="_blank" href="img_forest.jpg">
-                      <img src="img_forest.jpg" alt="Forest" width="600" height="400">
+                    <a target="_blank" href="./static/src/domain.png">
+                      <img src="./static/src/domain.png" alt="domain"  width="250px" height="250px">
                     </a>
                 </div>
                 <div class="gallery">
-                    <a target="_blank" href="img_forest.jpg">
-                      <img src="img_forest.jpg" alt="Forest" width="600" height="400">
+                    <a target="_blank" href="./static/src/link.png">
+                      <img src="./static/src/link.png" alt="link"  width="250px" height="250px">
                     </a>
                 </div>
             </div>
