--- a/templates/home.html
+++ b/templates/home.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,7 +14,7 @@
            <h1 class="pickstart">Pick one to START</h1>
             <div class="icons">
                 <div class="gallery">
-                    <a target="_blank" href="./static/src/ip.png">
+                    <a target="_blank" href="/ip">
                       <img src="./static/src/ip.png" alt="ip" width="250px" height="250px" >
                     </a>
                 </div>
