--- a/templates/ip.html
+++ b/templates/ip.html
@@ -1,12 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Analysis Tool</title>
-    <link rel="stylesheet" href="ip.css">
-</head>
-<body>
-    
-</body>
-</html>
+{% extends "base.html" %}
+{% block title %} IP Analysis {% endblock %}
+{% block content %}
+<h1> hi </h1>
+{% endblock %}
