--- a/templates/base.html
+++ b/templates/base.html
@@ -5,15 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Analysis Tool</title>
     <title>{% block title %}{% endblock %}</title>
-    <link rel="stylesheet" href=".\static\src\home.css">
+    <link rel="stylesheet" href=".\static\src\base.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body class="bg">
-
+    <ul class="nav flex-column nav-bar">
+        <li class="nav-item">
+            <img src="./static/src/home.png" alt="home" width="30" height="30">
+        </li>
+        <li class="nav-item">
+            <img src="./static/src/ip.png" alt="ip" width="30" height="30">
+        </li>
+        <li class="nav-item">
+            <img src="./static/src/domain.png" alt="domain" width="30" height="30">
+        </li>
+        <li class="nav-item">
+            <img src="./static/src/link.png" alt="url" width="30" height="30">
+        </li>
+        
+      </ul>
+    
     <div class="frame">
         <h1 class="title">Analysis Tool</h1>
         <div class="content">
            {% block content %}{% endblock %}
         </div>
     </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 </body>
 </html>
