--- a/templates/home.html
+++ b/templates/home.html
@@ -11,12 +11,12 @@
         </a>
     </div>
     <div class="gallery">
-        <a target="_blank" href="./static/src/domain.png">
+        <a target="_blank" href="/domain">
           <img src="./static/src/domain.png" alt="domain"  width="250px" height="250px">
         </a>
     </div>
     <div class="gallery">
-        <a target="_blank" href="./static/src/link.png">
+        <a target="_blank" href="/url">
           <img src="./static/src/link.png" alt="link"  width="250px" height="250px">
         </a>
     </div>
