--- a/templates/base.html
+++ b/templates/base.html
@@ -10,19 +10,34 @@
 </head>
 <body class="bg">
     <ul class="nav flex-column nav-bar">
-        <li class="nav-item">
-            <img src="./static/src/home.png" alt="home" width="30" height="30">
-        </li>
-        <li class="nav-item">
-            <img src="./static/src/ip.png" alt="ip" width="30" height="30">
-        </li>
-        <li class="nav-item">
-            <img src="./static/src/domain.png" alt="domain" width="30" height="30">
-        </li>
-        <li class="nav-item">
-            <img src="./static/src/link.png" alt="url" width="30" height="30">
-        </li>
-        
+        <nav class="navbar bg-body-tertiary">
+            <div class="container">
+              <a class="navbar-brand" href="#">
+                <img src="./static/src/home.png" alt="home" width="30" height="30">
+              </a>
+            </div>
+          </nav>
+          <nav class="navbar bg-body-tertiary">
+            <div class="container">
+              <a class="navbar-brand" href="#">
+                <img src="./static/src/ip.png" alt="ip" width="30" height="30">
+              </a>
+            </div>
+          </nav>
+          <nav class="navbar bg-body-tertiary">
+            <div class="container">
+              <a class="navbar-brand" href="#">
+                <img src="./static/src/domain.png" alt="domain" width="30" height="30">
+              </a>
+            </div>
+          </nav>
+          <nav class="navbar bg-body-tertiary">
+            <div class="container">
+              <a class="navbar-brand" href="#">
+                <img src="./static/src/link.png" alt="url" width="30" height="30">
+              </a>
+            </div>
+          </nav>
       </ul>
     
     <div class="frame">
