--- a/templates/ip.html
+++ b/templates/ip.html
@@ -1,5 +1,23 @@
 {% extends "base.html" %}
 {% block title %} IP Analysis {% endblock %}
+{% block link  %}.\static\src\ip.css" {% endblock %}
 {% block content %}
-<h1> hi </h1>
+<h1 class="content-title"> IP </h1>
+<div class="board-display">
+    <div class="card card-display" style="width: 20rem;">
+        <img src="..." class="card-img-top" alt="...">
+        <div class="card-body">
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+    </div>
+    <div class="grid"  style="--bs-rows: 4; --bs-gap: 5rem;">
+       <div class="item"> 1</div>
+       <div class="item"> 1</div>
+       <div class="item"> 1</div>
+       <div class="item"> 1</div>
+    </div>
+    <div class="group-display">
+        abs
+    </div>
+</div>
 {% endblock %}
