--- a/static/src/home.css
+++ b/static/src/home.css
@@ -1,36 +1,35 @@
-
-
-.pickstart{
-    position: absolute;
+.content-title{
+    position: relative;
+    padding-top: 12px;
     height: 75.69px;
-    left: 30vw;
-    top:5vh;
     font-family: Arial, Helvetica, sans-serif;
     font-style: normal;
     font-weight: 700;
     font-size: 48px;
-    line-height: 120%;
+    line-height: 58px;
     /* or 58px */
     letter-spacing: -0.02em;
     color: #000000;
     text-align: center; 
+    align-self: center;
+    width: 92.395vw;
+    height: auto;
 }
 .icons{
-
-    display: flex;
-    flex-direction: row;
-    align-self: center;
-    align-content: center;
-    justify-content: center;
-    margin-top: 10vh;
-    padding: 8px;
-    gap: 10vw;
-
+   position: relative;
+   width: 100%;
+   height: 70vh;
+   display: flex;
+   flex-direction: row;
+   padding: 2vh 15vw;
+   gap: 3vw;
+   align-self: center;
+   justify-self: center;
 }
 .gallery{
-    width: 18.229vw;
-    height: 35.125vh;
+    position: relative;
     justify-self: center;
     align-self: center;
 }
+
 
