--- a/templates/base.html
+++ b/templates/base.html
@@ -3,37 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Analysis Tool</title>
-    <title>{% block title %}{% endblock %}</title>
-    <link rel="stylesheet" href=".\static\src\base.css">
+    <title>{% block title %}Analysis Tool{% endblock %}</title>
+    <link rel="stylesheet" href= " .\static\src\base.css">
+    <link rel="stylesheet" href= "{% block link %} .\static\src\base.css {% endblock %} ">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body class="bg">
     <ul class="nav flex-column nav-bar">
-        <nav class="navbar bg-body-tertiary">
+        <nav class="navbar bg-body-tertiary nav-item">
             <div class="container">
-              <a class="navbar-brand" href="#">
+              <a class="navbar-brand" href="/">
                 <img src="./static/src/home.png" alt="home" width="30" height="30">
               </a>
             </div>
           </nav>
-          <nav class="navbar bg-body-tertiary">
+          <nav class="navbar bg-body-tertiary nav-item">
             <div class="container">
-              <a class="navbar-brand" href="#">
+              <a class="navbar-brand" href="/ip">
                 <img src="./static/src/ip.png" alt="ip" width="30" height="30">
               </a>
             </div>
           </nav>
-          <nav class="navbar bg-body-tertiary">
+          <nav class="navbar bg-body-tertiary nav-item">
             <div class="container">
-              <a class="navbar-brand" href="#">
+              <a class="navbar-brand" href="/domain">
                 <img src="./static/src/domain.png" alt="domain" width="30" height="30">
               </a>
             </div>
           </nav>
-          <nav class="navbar bg-body-tertiary">
+          <nav class="navbar bg-body-tertiary nav-item">
             <div class="container">
-              <a class="navbar-brand" href="#">
+              <a class="navbar-brand" href="/url">
                 <img src="./static/src/link.png" alt="url" width="30" height="30">
               </a>
             </div>
