--- a/templates/home.html
+++ b/templates/home.html
@@ -1,24 +1,25 @@
 {% extends "base.html" %}
 
-{% block title %} IP Analysis {% endblock %}
-<link rel="stylesheet" href=".\static\src\home.css">
+
+{% block link  %}.\static\src\home.css" {% endblock %}
+
 {% block content %}
-<h1 class="pickstart">Pick one to START</h1>
+<h1 class="content-title">Pick one to START</h1>
 <div class="icons">
-    <div class="gallery">
-        <a target="_blank" href="/ip">
-          <img src="./static/src/ip.png" alt="ip" width="250px" height="250px" >
-        </a>
-    </div>
-    <div class="gallery">
-        <a target="_blank" href="/domain">
-          <img src="./static/src/domain.png" alt="domain"  width="250px" height="250px">
-        </a>
-    </div>
-    <div class="gallery">
-        <a target="_blank" href="/url">
-          <img src="./static/src/link.png" alt="link"  width="250px" height="250px">
-        </a>
-    </div>
+  <div class="gallery">
+    <a target="_blank" href="/ip">
+      <img src="./static/src/ip.png" alt="ip" width="250px" height="250px" >
+    </a>
+  </div>
+  <div class="gallery">
+    <a target="_blank" href="/domain">
+      <img src="./static/src/domain.png" alt="domain" width="250px" height="250px" >
+    </a>
+  </div>
+  <div class="gallery">
+    <a target="_blank" href="/url">
+      <img src="./static/src/link.png" alt="url" width="250px" height="250px" >
+    </a>
+  </div>
 </div>
 {% endblock %}
