--- a/templates/domain.html
+++ b/templates/domain.html
@@ -1,5 +1,26 @@
 {% extends "base.html" %}
-{% block title %} Domian Analysis {% endblock %}
+{% block title %} Domain Analysis {% endblock %}
+{% block link  %}.\static\src\domain.css" {% endblock %}
 {% block content %}
-<h1> Domain </h1>
+<h1 class="content-title"> Doamin </h1>
+<div class="board-display">
+    <div class="card card-display" style="width: 32vw;">
+        <img src="..." class="card-img-top" alt="...">
+        <div class="card-body">
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+    </div>
+    <div class="grid" >
+       <div class="item" style="height: 15vh;"> 1
+
+       </div>
+       <div class="item" style="height: 15vh;"> 1</div>
+       <div class="item" style="height: 15vh;"> 1</div>
+       <div class="item" style="height: 15vh;"> 1</div>
+    </div>
+    <div class="grid">
+        <div class="item" style="height: 34vh;"> 2</div>
+        <div class="item" style="height: 34vh;"> 2</div>
+    </div>
+</div>
 {% endblock %}
