--- a/static/src/ip.css
+++ b/static/src/ip.css
@@ -21,7 +21,8 @@
    display: flex;
    flex-direction: row;
    padding: 0vh 3vw 3vh 3vw;
-   gap: 3vw;
+   gap: 2vw;
+   justify-content: space-between;
 }
 .card-display{
     display: flex;
@@ -29,21 +30,20 @@
     align-items: flex-start;
     padding: 0px;
     isolation: isolate;
-
     position: relative;
-    width: 517px;
     height:100%;
     border-radius: 12px;
 }
 .item{
     padding: 0px;
     position: relative;
-    width: 14.531vw;
-    height: 12.8vh;
     border-radius: 12px;
-    background-color: #333332 ;
+    background-color: #333332;
+    width: 25vw;
 
 }
-.group-display{
-    gap:2vh;
+.grid {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
