--- a/templates/ip.html
+++ b/templates/ip.html
@@ -4,20 +4,23 @@
 {% block content %}
 <h1 class="content-title"> IP </h1>
 <div class="board-display">
-    <div class="card card-display" style="width: 20rem;">
+    <div class="card card-display" style="width: 32vw;">
         <img src="..." class="card-img-top" alt="...">
         <div class="card-body">
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
         </div>
     </div>
-    <div class="grid"  style="--bs-rows: 4; --bs-gap: 5rem;">
-       <div class="item"> 1</div>
-       <div class="item"> 1</div>
-       <div class="item"> 1</div>
-       <div class="item"> 1</div>
+    <div class="grid" >
+       <div class="item" style="height: 15vh;"> 1
+
+       </div>
+       <div class="item" style="height: 15vh;"> 1</div>
+       <div class="item" style="height: 15vh;"> 1</div>
+       <div class="item" style="height: 15vh;"> 1</div>
     </div>
-    <div class="group-display">
-        abs
+    <div class="grid">
+        <div class="item" style="height: 34vh;"> 2</div>
+        <div class="item" style="height: 34vh;"> 2</div>
     </div>
 </div>
 {% endblock %}
