move css to folder

--- a/templates/domain.html
+++ b/templates/domain.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block title %} Domain Analysis {% endblock %}
-{% block link  %}.\static\src\domain.css" {% endblock %}
+{% block link  %}.\static\css\domain.css" {% endblock %}
 {% block content %}
 <h1 class="content-title"> Doamin </h1>
 <div class="board-display">
