--- a/templates/home.html
+++ b/templates/home.html
@@ -1,23 +1,23 @@
 {% extends "base.html" %}
 
 
-{% block link  %}.\static\src\home.css" {% endblock %}
+{% block link  %}.\static\css\home.css" {% endblock %}
 
 {% block content %}
 <h1 class="content-title">Pick one to START</h1>
 <div class="icons">
   <div class="gallery">
-    <a target="_blank" href="/ip">
+    <a href="/ip">
       <img src="./static/src/ip.png" alt="ip" width="250px" height="250px" >
     </a>
   </div>
   <div class="gallery">
-    <a target="_blank" href="/domain">
+    <a  href="/domain">
       <img src="./static/src/domain.png" alt="domain" width="250px" height="250px" >
     </a>
   </div>
   <div class="gallery">
-    <a target="_blank" href="/url">
+    <a href="/url">
       <img src="./static/src/link.png" alt="url" width="250px" height="250px" >
     </a>
   </div>
