--- a/templates/ip.html
+++ b/templates/ip.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block title %} IP Analysis {% endblock %}
-{% block link  %}.\static\src\ip.css" {% endblock %}
+{% block link  %}.\static\css\ip.css" {% endblock %}
 {% block content %}
 <h1 class="content-title"> IP </h1>
 <div class="board-display">
