--- a/static/css/base.css
+++ b/static/css/base.css
@@ -2,19 +2,17 @@
     background: #232423;
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    align-content: center;
+    height: 100vh;
 }
 
 .nav-bar{
-    align-items: center;
-    padding: 88px 0px 56px 0px;
-    gap: 40px;
+    position: sticky;
+    gap: 5%;
     background: #d3d3d3;
+    max-width: 5%;
+    padding-top: 5%;
+    justify-content: top;
     position: relative;
-    width: 4.167vw;
-    margin-left: 0;
-    height: 100vh;
 }
 .nav-item{
     z-index: 9999;
@@ -25,7 +23,10 @@
     flex-direction: column;
     justify-content: center;
     align-content: center;
-    width: 95.833vw
+    width: 95%;
+    height: 100%;
+    padding-top: 1%;
+
 }
 .title{
     /* Analysis Tool */
@@ -34,22 +35,21 @@
     font-style: normal;
     font-weight: 700;
     font-size: 36px;
-    line-height: 28px;
-    margin-left: 33px;
-    margin-top: 1.4vh;
-
+    line-height: 2.8vh;
+    margin-left: 3vw;
+    margin-top: 2vh;
+    position: relative;
 }
 .content{
     display: flex;
     box-sizing: border-box;
     position: relative;
-    margin: 12px 1.719vw 12px 1.719vw;
-    height: 85vh;
-    width: 92.395vw;
+    margin:1vh 3vw;
     align-content: center;
     background: #EBBD03;
     border-width: 0px;
     border-radius: 5px;
     flex-direction: column;
+    height: 100%;
 
 }
