--- a/templates/domain.html
+++ b/templates/domain.html
@@ -2,25 +2,35 @@
 {% block title %} Domain Analysis {% endblock %}
 {% block link  %}.\static\css\domain.css" {% endblock %}
 {% block content %}
-<h1 class="content-title"> Doamin </h1>
-<div class="board-display">
-    <div class="card card-display" style="width: 32vw;">
-        <img src="..." class="card-img-top" alt="...">
-        <div class="card-body">
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        </div>
+<div class="title-display">
+    <h1  class="content-title"> Domain </h1>
+    <div class="input-group mb-2 inputbar" style="height: 50%; width: 75%; ">
+        <input type="text" class="form-control " placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="button-addon2">
+        <button class="btn btn-outline-secondary" type="button" id="button-addon2">Button</button>
     </div>
+</div>
+<div class="board-display">
     <div class="grid" >
-       <div class="item" style="height: 15vh;"> 1
-
-       </div>
-       <div class="item" style="height: 15vh;"> 1</div>
-       <div class="item" style="height: 15vh;"> 1</div>
-       <div class="item" style="height: 15vh;"> 1</div>
+        <div class="card card-display" style="width: 28vw; height: 67%;">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+        </div>
+        <div class="item" style="height: 20vh; width: 28vw;"> 1</div>
+     </div>
+   
+    <div class="grid" >
+       <div class="item" style="height: 14.75vh;"> 1</div>
+       <div class="item" style="height: 14.75vh;"> 1</div>
+       <div class="item" style="height: 14.75vh;"> 1</div>
+       <div class="item" style="height: 14.75vh;"> 1</div>
     </div>
     <div class="grid">
-        <div class="item" style="height: 34vh;"> 2</div>
-        <div class="item" style="height: 34vh;"> 2</div>
+        <div class="item" style="height: 23vh;"> 2</div>
+        <div class="item" style="height: 13vh;"> 1</div>
+        <div class="item" style="height: 13vh;"> 1</div>
+        <div class="item" style="height: 13vh;"> 1</div>
     </div>
 </div>
 {% endblock %}
