--- a/templates/home.html
+++ b/templates/home.html
@@ -5,17 +5,17 @@
 <div class="icons">
   <div class="gallery">
     <a href="/ip">
-      <img src="./static/src/ip.png" alt="ip" width="250px" height="250px" >
+      <img src="./static/src/ip.png" alt="ip" width="100%" height="100%" >
     </a>
   </div>
   <div class="gallery">
     <a  href="/domain">
-      <img src="./static/src/domain.png" alt="domain" width="250px" height="250px" >
+      <img src="./static/src/domain.png" alt="domain" width="100%" height="100%" >
     </a>
   </div>
   <div class="gallery">
     <a href="/url">
-      <img src="./static/src/link.png" alt="url" width="250px" height="250px" >
+      <img src="./static/src/link.png" alt="url" width="100%" height="100%" >
     </a>
   </div>
 </div>
