--- a/templates/ip.html
+++ b/templates/ip.html
@@ -11,23 +11,21 @@
 </div>
 
 <div class="board-display">
-    <div class="card card-display" style="width: 32vw;">
+    <div class="card card-display" style="width: 35%;">
         <img src="..." class="card-img-top" alt="...">
         <div class="card-body">
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
         </div>
     </div>
     <div class="grid" >
-       <div class="item" style="height: 15vh;"> 1
-
-       </div>
-       <div class="item" style="height: 15vh;"> 1</div>
-       <div class="item" style="height: 15vh;"> 1</div>
-       <div class="item" style="height: 15vh;"> 1</div>
+       <div class="item" style="height: 23%;"> 1</div>
+       <div class="item" style="height: 23%"> 1</div>
+       <div class="item" style="height: 23%;"> 1</div>
+       <div class="item" style="height: 23%;"> 1</div>
     </div>
     <div class="grid">
-        <div class="item" style="height: 33vh;"> 2</div>
-        <div class="item" style="height: 33vh;"> 2</div>
+        <div class="item" style="height: 49%;"> 2</div>
+        <div class="item" style="height: 49%;"> 2</div>
     </div>
 </div>
 {% endblock %}
