--- a/static/css/domain.css
+++ b/static/css/domain.css
@@ -4,7 +4,6 @@
 }
 .content-title{
     position:relative;
-    height: 75.69px;
     font-family: Arial, Helvetica, sans-serif;
     font-style: normal;
     font-weight: 700;
@@ -15,22 +14,24 @@
     color: #000000;
     text-align: left; 
     align-self: left;
-    padding-left: 3vw;
-    padding-top: 3vh;
-    width:18vw;
+    padding-left: 3%;
+    padding-top: 2%;
+    width:20%;
 }
 .inputbar{
-    top: 3vh;
+    width:100%;
+    padding-top: 2%;
 }
 .board-display{
-   position: relative;
-   width: 100%;
-   height: 100%;
-   display: flex;
-   flex-direction: row;
-   padding: 0vh 3vw 3vh 3vw;
-   justify-content: space-between;
-}
+    position: relative;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    padding: 0% 3% 2% 3%;
+    gap: 2%;
+    justify-content: space-between;
+ }
 .card-display{
     display: flex;
     flex-direction: row;
@@ -38,7 +39,7 @@
     padding: 0px;
     isolation: isolate;
     position: relative;
-    height:60vh;
+    height:100%;
     border-radius: 12px;
 }
 .item{
@@ -46,7 +47,7 @@
     position: relative;
     border-radius: 12px;
     background-color: #333332;
-    width: 28vw;
+    width: 25vw;
 
 }
 .grid {
