--- a/templates/domain.html
+++ b/templates/domain.html
@@ -11,26 +11,26 @@
 </div>
 <div class="board-display">
     <div class="grid" >
-        <div class="card card-display" style="width: 28vw; height: 67%;">
+        <div class="card card-display" style=" width: 100%; height: 67%;">
             <img src="..." class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
         </div>
-        <div class="item" style="height: 20vh; width: 28vw;"> 1</div>
+        <div class="item" style="width: 100%;height: 31%;"> 1</div>
      </div>
    
     <div class="grid" >
-       <div class="item" style="height: 14.75vh;"> 1</div>
-       <div class="item" style="height: 14.75vh;"> 1</div>
-       <div class="item" style="height: 14.75vh;"> 1</div>
-       <div class="item" style="height: 14.75vh;"> 1</div>
+        <div class="item" style="height: 23%;"> 1</div>
+        <div class="item" style="height: 23%"> 1</div>
+        <div class="item" style="height: 23%;"> 1</div>
+        <div class="item" style="height: 23%;"> 1</div>
     </div>
     <div class="grid">
-        <div class="item" style="height: 23vh;"> 2</div>
-        <div class="item" style="height: 13vh;"> 1</div>
-        <div class="item" style="height: 13vh;"> 1</div>
-        <div class="item" style="height: 13vh;"> 1</div>
+        <div class="item" style="height: 38%;"> 2</div>
+        <div class="item" style="height: 18%;"> 1</div>
+        <div class="item" style="height: 18%;"> 1</div>
+        <div class="item" style="height: 18%;"> 1</div>
     </div>
 </div>
 {% endblock %}
