--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,6 +1,6 @@
 .content-title{
     position: relative;
-    padding-top: 7%;
+    padding-top: 15%;
     font-family: Arial, Helvetica, sans-serif;
     font-style: normal;
     font-weight: 700;
@@ -10,22 +10,17 @@
     text-align: center; 
     align-self: center;
 }
-.icons{
-   position: relative;
-   width: 100%;
-   height: 100%;
-   display: flex;
-   flex-direction: row;
-   padding: 2% 15%;
-   padding-top:0% ;
-   gap: 10%;
-   align-self: center;
-   justify-self: center;
-}
-.gallery{
-    position: relative;
+.inputbar{
+    width: 80%;
+    height: 80%;
     justify-self: center;
+    align-items: center;
     align-self: center;
+    padding-top: 4.5%;
+    justify-content: center;
 }
-
-
+.inputfield{
+    width: 85%;
+    align-self: center;
+    height: 100%;
+}
