--- a/static/css/url.css
+++ b/static/css/url.css
@@ -1,28 +1,24 @@
 .content-title{
     position: relative;
-    padding-top: 1.8vh;
-    height: 75.69px;
+    padding-top: 7%;
     font-family: Arial, Helvetica, sans-serif;
     font-style: normal;
     font-weight: 700;
     font-size: 48px;
-    line-height: 5.8px;
-    /* or 58px */
     letter-spacing: -0.02em;
     color: #000000;
     text-align: center; 
-    align-self: left;
-    width: 92.395vw;
-    height: auto;
-}
-.inputbar{
-    top: 3vh;
+    align-self: center;
 }
 .item{
     padding: 0px;
     position: relative;
     border-radius: 12px;
     background-color: #333332;
-    width: 25vw;
+    width: 80%;
+    align-self: center;
+    height: 100%;
+    margin: 2%;
+    margin-top: 1.5%;
 
 }
