--- a/templates/base.html
+++ b/templates/base.html
@@ -5,38 +5,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Analysis Tool{% endblock %}</title>
     <link rel="stylesheet" href= " .\static\css\base.css">
-    <link rel="stylesheet" href= "{% block link %} .\static\src\base.css {% endblock %} ">
+    <link rel="stylesheet" href= "{% block link %} {% endblock %} ">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body class="bg">
     <div class="nav flex-column nav-bar">
         <nav class="navbar bg-body-tertiary nav-item">
-            <div class="container">
-              <a class="navbar-brand" href="/">
-                <img src="./static/src/home.png" alt="home" width="30" height="30">
-              </a>
-            </div>
+            <button class=" btn nav-button">
+                <a class=" navbar-brand " href="/">
+                    <img src="./static/src/home.png" alt="home" width="100%" height="100%">
+              </a>  
+            </button>
         </nav>
         <nav class="navbar bg-body-tertiary nav-item">
-            <div class="container">
-              <a class="navbar-brand" href="/ip">
-                <img src="./static/src/ip.png" alt="ip" width="30" height="30">
-              </a>
-            </div>
+            <button class=" btn nav-button">
+                <a class=" navbar-brand " href="/ip">
+                    <img src="./static/src/ip.png" alt="ip" width="100%" height="100%">
+              </a>  
+            </button>
         </nav>
         <nav class="navbar bg-body-tertiary nav-item">
-            <div class="container">
-              <a class="navbar-brand" href="/domain">
-                <img src="./static/src/domain.png" alt="domain" width="30" height="30">
-              </a>
-            </div>
+            <button class=" btn nav-button">
+                <a class=" navbar-brand " href="/domain">
+                    <img src="./static/src/domain.png" alt="domain" width="100%" height="100%">
+              </a>  
+            </button>
         </nav>
         <nav class="navbar bg-body-tertiary nav-item">
-            <div class="container">
-              <a class="navbar-brand" href="/url">
-                <img src="./static/src/link.png" alt="url" width="30" height="30">
-              </a>
-            </div>
+            <button class=" btn nav-button">
+                <a class=" navbar-brand " href="/url">
+                    <img src="./static/src/link.png" alt="link" width="100%" height="100%">
+              </a>  
+            </button>
         </nav>
       </div>
     
@@ -48,7 +48,14 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+   
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            var dropdownElementList = [].slice.call(document.querySelectorAll('.dropdown-toggle'))
+            var dropdownList = dropdownElementList.map(function (dropdownToggleEl) {
+                return new bootstrap.Dropdown(dropdownToggleEl)
+            })
+        });
+    </script>
 </body>
 </html>
