--- a/templates/home.html
+++ b/templates/home.html
@@ -1,22 +1,17 @@
 {% extends "base.html" %}
 {% block link  %}.\static\css\home.css" {% endblock %}
 {% block content %}
-<h1 class="content-title">Pick one to START</h1>
-<div class="icons">
-  <div class="gallery">
-    <a href="/ip">
-      <img src="./static/src/ip.png" alt="ip" width="100%" height="100%" >
-    </a>
-  </div>
-  <div class="gallery">
-    <a  href="/domain">
-      <img src="./static/src/domain.png" alt="domain" width="100%" height="100%" >
-    </a>
-  </div>
-  <div class="gallery">
-    <a href="/url">
-      <img src="./static/src/link.png" alt="url" width="100%" height="100%" >
-    </a>
-  </div>
+<h1 class="content-title">Insert an IP, Domain or URL to start</h1>
+<div class="inputbar">
+    <div class="input-group mb-3 ">
+        <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">Dropdown</button>
+        <ul class="dropdown-menu">
+          <li><a class="dropdown-item" href="#">ip</a></li>
+          <li><a class="dropdown-item" href="#">Another action</a></li>
+          <li><a class="dropdown-item" href="#">Something else here</a></li>
+        </ul>
+        <input type="text" class="form-control input-field" aria-label="Text input with dropdown button">
+      </div>
 </div>
+
 {% endblock %}
