--- a/static/css/ip.css
+++ b/static/css/ip.css
@@ -1,26 +1,22 @@
 .title-display{
     display: flex;
     flex-direction: row;
+    gap:11%;
+    align-content: space-between;
 }
 .content-title{
     position:relative;
     font-family: Arial, Helvetica, sans-serif;
     font-style: normal;
     font-weight: 700;
-    font-size: 36px;
+    font-size: 33px;
     line-height: 120%;
     /* or 58px */
     letter-spacing: -0.02em;
     color: #000000;
     text-align: left; 
     align-self: left;
-    padding-left: 3%;
-    padding-top: 2%;
-    width:20%;
-}
-.inputbar{
-    width:100%;
-    padding-top: 2%;
+    
 }
 .board-display{
    position: relative;
@@ -53,4 +49,11 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+}
+.title-line{
+    display: flex;
+    flex-direction: row;
+    padding-left: 3%;
+    padding-top: 2%;
+    width:20%;
 }
