--- a/templates/base.html
+++ b/templates/base.html
@@ -3,38 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="csrf-token" content="{{ csrf_token() }}">
     <title>{% block title %}Analysis Tool{% endblock %}</title>
-    <link rel="stylesheet" href= " .\static\css\base.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/base.css') }}">
     <link rel="stylesheet" href= "{% block link %} {% endblock %} ">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+   {% block scripts %}{% endblock %}
 </head>
 <body class="bg">
     <div class="nav flex-column nav-bar">
         <nav class="navbar bg-body-tertiary nav-item">
             <button class=" btn nav-button">
                 <a class=" navbar-brand " href="/">
-                    <img src="./static/src/home.png" alt="home" width="100%" height="100%">
+                    <img src="{{ url_for('static', filename='src/home.png') }}" alt="home" width="100%" height="100%">
               </a>  
             </button>
         </nav>
         <nav class="navbar bg-body-tertiary nav-item">
             <button class=" btn nav-button">
                 <a class=" navbar-brand " href="/ip">
-                    <img src="./static/src/ip.png" alt="ip" width="100%" height="100%">
+                    <img src="{{ url_for('static', filename='src/ip.png') }}" alt="ip" width="100%" height="100%">
               </a>  
             </button>
         </nav>
         <nav class="navbar bg-body-tertiary nav-item">
             <button class=" btn nav-button">
                 <a class=" navbar-brand " href="/domain">
-                    <img src="./static/src/domain.png" alt="domain" width="100%" height="100%">
+                    <img src="{{ url_for('static', filename='src/domain.png') }}" alt="domain" width="100%" height="100%">
               </a>  
             </button>
         </nav>
         <nav class="navbar bg-body-tertiary nav-item">
             <button class=" btn nav-button">
                 <a class=" navbar-brand " href="/url">
-                    <img src="./static/src/link.png" alt="link" width="100%" height="100%">
+                    <img src="{{ url_for('static', filename='src/link.png') }}" alt="link" width="100%" height="100%">
               </a>  
             </button>
         </nav>
@@ -46,16 +49,7 @@
            {% block content %}{% endblock %}
         </div>
     </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-   
-    <script>
-        document.addEventListener('DOMContentLoaded', function() {
-            var dropdownElementList = [].slice.call(document.querySelectorAll('.dropdown-toggle'))
-            var dropdownList = dropdownElementList.map(function (dropdownToggleEl) {
-                return new bootstrap.Dropdown(dropdownToggleEl)
-            })
-        });
-    </script>
+    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+    
 </body>
 </html>
