--- a/templates/domain.html
+++ b/templates/domain.html
@@ -1,12 +1,15 @@
 {% extends "base.html" %}
 {% block title %} Domain Analysis {% endblock %}
-{% block link  %}.\static\css\domain.css" {% endblock %}
+{% block link  %}{{ url_for('static', filename='css/domain.css') }}{% endblock %}
 {% block content %}
 <div class="title-display">
-    <h1  class="content-title"> Domain </h1>
-    <div class="input-group mb-2 inputbar" style="height: 50%; width: 75%; ">
+    <div class="title-line">
+        <h1  class="content-title"> Domain: &nbsp; </h1>
+        <h1 class="content-title"> {{domain_name}}</h1>
+    </div>
+    <div class="input-group mb-2 inputbar" style="position:relative; padding-right: 3%;padding-top:2% ; align-self: right;">
         <input type="text" class="form-control " placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="button-addon2">
-        <button class="btn btn-outline-secondary" type="button" id="button-addon2">Button</button>
+        <button class="btn btn-outline-secondary" type="button" id="button-addon2">Enter</button>
     </div>
 </div>
 <div class="board-display">
