some visual updates

--- a/static/css/domain.css
+++ b/static/css/domain.css
@@ -3,6 +3,7 @@
     flex-direction: row;
     gap:11%;
     align-content: space-between;
+    height: 15%;
 }
 .content-title{
     position:relative;
