--- a/templates/ip.html
+++ b/templates/ip.html
@@ -4,32 +4,49 @@
 {% block content %}
 <div class="title-display">
     <div class="title-line">
-        <h1  class="content-title"> IP: </h1>
+        <h1  class="content-title"> IP: &nbsp;</h1>
         <h1 class="content-title"> {{ip_addr}} </h1>
     </div>
     
-    <div class="input-group mb-2" style="position:relative; padding-right: 3%;padding-top:2%; align-self: right;">
+    <div class="input-group mb-2" style="position:relative;height: fit-content; padding-right: 3%;padding-top:2%; align-self: right;">
         <input type="text" class="form-control " placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="button-addon2">
         <button class="btn btn-outline-secondary" type="button" id="button-addon2">Button</button>
     </div>
 </div>
 
 <div class="board-display">
-    <div class="card card-display" style="width: 35%;">
+    <div class="card card-display" style="width: 35%; background-color:  #333332;" >
         <img src="..." class="card-img-top" alt="...">
-        <div class="card-body">
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <div class="card-body" style="width: 100%;">
+          <p class="card-text" style="width: 100%;">
+            <h3 class=" text">Country:</h3>
+            <h3 class=" text">Region: </h3>
+            <h3 class=" text">City: </h3>
+          </p>
         </div>
     </div>
     <div class="grid" >
-       <div class="item" style="height: 23%;"> 1</div>
-       <div class="item" style="height: 23%"> 1</div>
-       <div class="item" style="height: 23%;"> 1</div>
-       <div class="item" style="height: 23%;"> 1</div>
+       <div class="item" style="height: 23%;"> 
+            <h3 class=" text">ISP: </h3>
+       </div>
+       <div class="item" style="height: 23%">
+            <h3 class=" text">Organization: </h3>
+       </div>
+       
+       <div class="item" style="height: 23%;"> 
+            <h3 class=" text">IP Range: </h3>
+       </div>
+       <div class="item" style="height: 23%;"> 
+             <h3 class=" text">Host Name: </h3>
+       </div>
     </div>
     <div class="grid">
-        <div class="item" style="height: 49%;"> 2</div>
-        <div class="item" style="height: 49%;"> 2</div>
+        <div class="item" style="height: 49%;"> 
+            <h3 class=" text">Hetrix Tool </h3>
+        </div>
+        <div class="item" style="height: 49%;"> 
+            <h3 class=" text">Virus Total </h3>
+        </div>
     </div>
 </div>
 {% endblock %}
