--- a/templates/domain.html
+++ b/templates/domain.html
@@ -7,7 +7,7 @@
         <h1  class="content-title"> Domain: &nbsp; </h1>
         <h1 class="content-title"> {{domain_name}}</h1>
     </div>
-    <div class="input-group mb-2 inputbar" style="position:relative; padding-right: 3%;padding-top:2% ; align-self: right;">
+    <div class="input-group mb-2 inputbar" style="position:relative;height: fit-content; padding-right: 3%;padding-top:2% ; align-self: right;">
         <input type="text" class="form-control " placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="button-addon2">
         <button class="btn btn-outline-secondary" type="button" id="button-addon2">Enter</button>
     </div>
