--- a/templates/url.html
+++ b/templates/url.html
@@ -3,7 +3,10 @@
 {% block link  %}{{ url_for('static', filename='css/url.css') }} {% endblock %}
 {% block content %}
 
-<h1 class="content-title">Insert a URL</h1>
+<div class="title-line">
+    <h1  class="content-title"> URL link: &nbsp; </h1>
+    <h1 class="content-title"> {{url_link}}</h1>
+</div>
 <div class="input-group mb-2 inputbar" style="align-self:center; height:6vh; width: 75%; ">
     <input type="text" class="form-control " placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="button-addon2">
     <button class="btn btn-outline-secondary" type="button" id="button-addon2">Button</button>
