--- a/static/css/ip.css
+++ b/static/css/ip.css
@@ -43,7 +43,10 @@
     border-radius: 12px;
     background-color: #333332;
     width: 25vw;
-    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    
+    gap:1%;
 }
 .grid {
     display: flex;
@@ -59,7 +62,18 @@
 }
 .text{
     color: #ffffff;
-    justify-self: center;
-    font-size: 20px;
+    justify-self: top;
+    align-self: left;
     padding-left: 2%;
+    font-size: large;
+    margin-top: 2%;
+}
+.text-content{
+    color: #ffffff;
+    font-family: Arial, Helvetica, sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    margin: 0;
+    padding-top: 0%;
+    justify-self: center;
 }
