google map implementation

--- a/templates/base.html
+++ b/templates/base.html
@@ -50,6 +50,6 @@
         </div>
     </div>
     <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
-    
+    {% block googlemap %}{% endblock %}
 </body>
 </html>
