--- a/static/css/ip.css
+++ b/static/css/ip.css
@@ -65,7 +65,7 @@
     justify-self: top;
     align-self: left;
     padding-left: 2%;
-    font-size: large;
+    font-size: x-large; 
     margin-top: 2%;
 }
 .text-content{
@@ -74,6 +74,11 @@
     font-style: normal;
     font-weight: 400;
     margin: 0;
-    padding-top: 0%;
+    padding-top: 2%;
+    font-size: large;
     justify-self: center;
+}
+#map{
+    width: 100%;
+    height: 80%;
 }
